Update about & cookies entry

--- a/website/themes/frame/layout/pages/profile.ejs
+++ b/website/themes/frame/layout/pages/profile.ejs
@@ -19,56 +19,28 @@
                 <ol>
                     <li> Introduction.</li> 
                         <ul>
-                            <li>Web History.</li>
-                            <li>Basic knowledge.</li>
                         </ul>
                     <li> Web Today!</li>
                         <ul>
-                            <li>Introduction</li>
-                            <li>Useful skills</li>
-                            <li>HSTS</li>
-                            <li>Iframes</li>
-                            <li>CDN</li>
-                            <li>Cookies</li>
-                            <li>Security Headers (SOP, CORS, CSP...)</li>
+                            <li><a href="/web.today/cookies">Cookies. ☑️</a></li>
                         </ul>
                     <li> Application flaws.</li>
                         <ul>
-                            <li>Introduction</li>
-                            <li>Cross-Site Scripting (XSS)</li>
-                            <li>Cross-Site Request Forgery (CSRF)</li>
-                            <li>Command Injection</li>
-                            <li>Server-Side Template Injection (SSTI)</li>
-                            <li>SQL injection (SQLi)</li>
-                            <li>DOM cloaking</li>
-                            <li>Prototype Pollution</li>
                         </ul>
                     <li> Browser Internals</li>
                         <ul>
-                            <li>Introduction.</li>
-                            <li>Browser extensions.</li>
-                            <li>How a URL Scheme is interpreted.</li>
                             <li><a href="/browser/custom.browser">How to build a browser on top of chromium. ☑️</a></li>
                             <li><a href="/browser/web.to.app">Web-to-App Communication Overview. ☑️</a></li>
-                            <li>How Cache works (cache partitioning)</li>
-                            <li>Browser Processes</li>
                         </ul>
-                    <li> V8</li>
+                    <li> V8 (Low Level)</li>
                         <ul>
-                            <li>Introduction.</li>
-                            <li>Prototypes.</li>
-                            <li>Memory Management.</li>
                         </ul>
                     <li> Advanced Topics</li>
                         <ul>
-                            <li>Bot detection & Content Cloaking</li>
-                            <li>XS leaks</li>
-                            <li>Web Tracking</li>
-                            <li>Phising</li>
-                            <li>Browser Security</li>
-                            <li>Ad papers work</li>
-                            <li>Web Measurements</li>
-                            <li>InterPlanetary FileSystem in Web (IPFS)</li>
+                            <li><a href="/advanced/web.tracking">Web Tracking. ☑️</a></li>
+                        </ul>
+		    <li> Incoming Web Features</li>
+                        <ul>
                         </ul>
                 </ol>
             </div>
