--- a/website/themes/frame/layout/partials/head.ejs
+++ b/website/themes/frame/layout/partials/head.ejs
@@ -66,7 +66,7 @@ if (is_archive()){
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HWYY8DJW4W');
+  gtag('config', 'G-31N6Z0XH0G');
 </script>
 
 <%# mathjax support %>
