--- a/website/themes/frame/layout/partials/head.ejs
+++ b/website/themes/frame/layout/partials/head.ejs
@@ -60,7 +60,7 @@ if (is_archive()){
     <script src="<%- url_for(url) %>"></script>
     <% }); %>
 <% } %>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HWYY8DJW4W"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-31N6Z0XH0G"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
