Storage Partitioning entry

--- a/website/themes/frame/layout/pages/profile.ejs
+++ b/website/themes/frame/layout/pages/profile.ejs
@@ -40,7 +40,9 @@
                             <li><a href="/advanced/web.tracking">Web Tracking. ☑️</a></li>
                         </ul>
 		    <li> Incoming Web Features</li>
-                        <ul></ul>
+                        <ul>
+                            <li><a href="/incoming/storage.partitioning">Storage Partitioning. ☑️</a></li>
+			</ul>
                 </ol>
             </div>
         </div>
