Learning-path blog post

--- a/website/themes/frame/layout/pages/profile.ejs
+++ b/website/themes/frame/layout/pages/profile.ejs
@@ -19,6 +19,7 @@
                 <ol>
                     <li> Introduction.</li> 
                         <ul>
+                            <li><a href="/introduction/learning-path">Learning path. ☑️</a></li>
                         </ul>
                     <li> Web Today!</li>
                         <ul>
