--- a/website/themes/frame/layout/pages/profile.ejs
+++ b/website/themes/frame/layout/pages/profile.ejs
@@ -19,30 +19,31 @@
                 <ol>
                     <li> Introduction.</li> 
                         <ul>
-                            <li><a href="/introduction/learning-path">Learning path. ☑️</a></li>
+                            <li><a href="/web-security-class/introduction/learning-path">Learning path. ☑️</a></li>
                         </ul>
                     <li> Web Today!</li>
                         <ul>
-                            <li><a href="/web.today/cookies">Cookies. ☑️</a></li>
+                            <li><a href="/web-security-class/web.today/cookies">Cookies. ☑️</a></li>
                         </ul>
                     <li> Application flaws.</li>
                         <ul>
                         </ul>
                     <li> Browser Internals</li>
                         <ul>
-                            <li><a href="/browser/custom.browser">How to build a browser on top of chromium. ☑️</a></li>
-                            <li><a href="/browser/web.to.app">Web-to-App Communication Overview. ☑️</a></li>
+                            <li><a href="/web-security-class/browser/custom.browser">How to build a browser on top of chromium. ☑️</a></li>
+                            <li><a href="/web-security-class/browser/web.to.app">Web-to-App Communication Overview. ☑️</a></li>
+                            <li><a href="/web-security-class/browser/browser.permissions">Browser Permissions. ☑️</a></li>
                         </ul>
                     <li> V8 (Low Level)</li>
                         <ul>
                         </ul>
                     <li> Advanced Topics</li>
                         <ul>
-                            <li><a href="/advanced/web.tracking">Web Tracking. ☑️</a></li>
+                            <li><a href="/web-security-class/advanced/web.tracking">Web Tracking. ☑️</a></li>
                         </ul>
 		    <li> Incoming Web Features</li>
                         <ul>
-                            <li><a href="/incoming/storage.partitioning">Storage Partitioning. ☑️</a></li>
+                            <li><a href="/web-security-class/incoming/storage.partitioning">Storage Partitioning. ☑️</a></li>
 			</ul>
                 </ol>
             </div>
